--- a/style.css
+++ b/style.css
@@ -1,13 +1,189 @@
 @import 
-url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&family=Pixelify+Sans:wght@400;500;600;700&display=swap');
+url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&family=Pixelify+Sans:wght@400;500;600;700&&family=Spline+Sans+Mono:wght@400;600;700&display=swap');
+
+/* Google Material Icon */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+/* Remove input scroll arrow*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 body {
-  background: linear-gradient(89deg, rgb(253, 220, 155) 26.2%, rgb(255, 215, 165) 48.5%);
+  font-family: 'Spline Sans Mono', sans-serif;
+  background: rgb(8, 8, 8);
+}
+
+.glitch-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 32px 0;
+}
+
+.glitch {
+  position: relative;
+  font-size: 64px;
+  font-weight: bold;
+  color: #FFFFFF;
+  letter-spacing: 3px;
+  z-index: 1;
+}
+
+.glitch:before,
+.glitch:after {
+  display: block;
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+}
+
+.glitch:before {
+  animation: glitch-it 01s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+  color: #00FFFF;
+  z-index: -1;
+}
+
+.glitch:after {
+  animation: glitch-it 01s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both infinite;
+  color: #FF00FF;
+  z-index: -2;
+}
+
+@keyframes glitch-it {
+  0% {
+     transform: translate(0);
+  }
+  20% {
+     transform: translate(-2px, 2px);
+  }
+  40% {
+     transform: translate(-2px, -2px);
+  }
+  60% {
+     transform: translate(2px, 2px);
+  }
+  80% {
+     transform: translate(2px, -2px);
+  }
+  to {
+     transform: translate(0);
+  }
+}
+
+section {
+  width: 800px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.div {
+  width: 800px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 10px 22px rgba(225, 225, 225, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 1);
+  margin: 32px 0;
+  padding: 16px 32px;
+  box-sizing: border-box;
+}
+
+.game-options {
+  height: 48px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#size {
+  color: #a3a3a3;
+  height: 24px;
+  width: 64px;
+  text-align: center;
+  background: none;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255 255, 255, 0.5);
+  margin: 0 8px;
+}
+
+.m-space {
+  margin: 0 px;
+  color: #a3a3a3;
+}
+
+#submit {
+  outline: none;
+  margin: 0 8px;
+  background: rgba(255, 255, 255, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 10px 22px rgba(225, 225, 225, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  transition-property: border, background-color;
+  transition-duration: 0.5s;
+}
+
+#submit:hover {
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.grid-on-off {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#grid-on, #grid-off {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 10px 22px rgba(225, 225, 225, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  transition-property: border;
+  transition-duration: 0.5s;
+  margin: 0 16px;
+}
+
+#grid-on:hover, #grid-off:hover {
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 #canvas {
     display: flex;
     flex-wrap: wrap;
+    box-shadow: 0px 10px 22px rgba(225, 225, 225, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.2);
   }
   
   .grid-box {
